--- a/about.html
+++ b/about.html
@@ -142,6 +142,9 @@
               <li><i class="fas fa-envelope me-2"></i> Sales.rose.roma@gmail.com</li>
                 <li><i class="fas fa-phone-alt me-2"></i> +20 01034149410</li>
               <li><i class="fas fa-clock me-2"></i> Mon-Fri: 9AM - 6PM</li>
+              <a href="http://wa.me/201034123226" target="_blank" class="whatsapp-btn">
+Contact us via WhatsApp
+</a>
             </ul>
           </div>
         </div>
