--- a/products.html
+++ b/products.html
@@ -243,6 +243,9 @@
               <li><i class="fas fa-envelope me-2"></i> Sales.rose.roma@gmail.com</li>
                 <li><i class="fas fa-phone-alt me-2"></i> +20 01034149410</li>
               <li><i class="fas fa-clock me-2"></i> Mon-Fri: 9AM - 6PM</li>
+               <a href="https://wa.me/201034123226" class="whatsapp-float" target="_blank">
+    <i class="fab fa-whatsapp"></i>
+  </a>
             </ul>
           </div>
         </div>
