--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
   <!-- Custom CSS -->
+    <link rel="stylesheet" href="assets/css/style.css" />
   <style>
     :root {
       --primary-color: #8e6c88;
